Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.0.0 Beta2
-
Component/s: Tools: Linguist
-
Labels:None
-
Platform/s:
-
Commits:6f3c749f0e85c0bfd93a6d176fce2f25edf58962 (qt/qttools/dev) bf8e0906c1f009e274340b0aafb58f5081f97944 (qt/qttools/6.0) 82fccf15eb5635263e6c6827564fadedde5c7cbb (qt/qttools/6.0.0)
Description
Steps to reproduce:
- cd qttranslations/translations
- qmake
- make ts-de
producesASSERT: "yyWord.isDetached()" in file qt-6/qttools/src/linguist/lupdate/cpp.cpp, line 390
and a core in the root dir of the repository.
Attachments
Issue Links
- relates to
-
QTBUG-88710 tst_lupdate triggers QChar assert
-
- Closed
-